# SpikeSynth

./: .gitignore  PrintedSpikingNN_lP_New.py  README.md  Train_pRSNN.ipynb  configuration.py  exp_pSNN_IP.ipynb  exp_pSNN_lP.py  flake.nix  pyproject.toml  snntorch.nix  train_pRSNN.ipynb
pLSNN/models/: model_pSNN_data_acuteinflammation_seed_00.model
src/spikesynth/: __init__.py
src_old/: PrintedSpikingNN_lP.py
surrogate/: 1_create_surrogate_dataset.ipynb  1_read_new.ipynb  2_create_gpt_surrogate.ipynb  2_create_rsnn_surrogate.ipynb  2_model_new.ipynb  2_train_gpt_surrogate.py  2_train_rsnn_surrogate.py  3_hyperparameter_search_rsnn.py  BA_First_Test.ipynb  Lighning_Pipeline_rsnn.ipynb  RSNN.py  requirements.txt  run_sweep.py  slurm_sweep.sh  slurm_sweep_singular_train.sh  sweep_hyperparameter_rsnn.yaml  sweep_hyperparameter_rsnn_optimizer.yaml  sweep_hyperparameter_slstm.yaml  sweep_rsnn.yaml  test.ipynb  train_sweep_rsnn_model.py  training.py  untitled.py
surrogate/NNs/: first_test.pt  predictor_final
surrogate/lightning_logs/version_0/: events.out.tfevents.1760973820.logos.7434.0  hparams.yaml
surrogate/models/GPT/: predictor_femto-test_lr_-3_seed_0.pt
surrogate/old_src/: 2_create_gpt_surrogate.ipynb  3_evaluation.ipynb  BA_First_Test.ipynb  Lighning_Pipeline_snn.ipynb  run_sweep.py  sweep_snn.yaml  train_sweep_snn_model.py
surrogate/temp/: NN_-8452096691130601980_1759759524
surrogate/utils/: MyTransformer_lP.py  RSNN.py  training.py
surrogate/wandb/: latest-run
utils/: PrintedSpikingNN_lP_New.py  generate_graphics.ipynb  training.py
(+1129 files in other folders)
