[project]
name = "spikesynth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LuposX"}
]
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "lab>=8.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "seaborn>=0.13.2",
    "snntorch>=0.9.4",
    "tonic>=1.4.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]
spikesynth = "spikesynth:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
